Expanded map width to full width of browser window.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,7 @@ h1 {
 
 #map {
   height: 600px;
-  width: 600px;
+  width: 100%;
   margin-right: 0px;
   padding: 0px;
   display: inline-block; }
