--- a/views/chat.html
+++ b/views/chat.html
@@ -1,37 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <link href='https://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="/public/css/styles.css" media="screen" charset="utf-8">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script>
+  $(function() {
+    $( "#dialog" ).dialog();
+  });
+  </script>
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-<script>
-  var socket = io();
-  $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    // connectedUsers[USER_NAME_HERE].emit('chat message', $('#m').val());
-    $('#m').val('');
-    return false;
-  });
-  socket.on('chat message', function(msg){
-    // connectedUsers[USER_NAME_HERE] = socket;
-    $('#messages').append($('<li>').text(msg));
-  });
-</script>
+    <div class="container">
+      <h1>username password letz</h1>
+      <div id="map">
+        <div id="dialog" title="Basic dialog">
+        <p>default dialog</p>
+        </div>
+    </div>
+    </div>
+    <script type="text/javascript" src="/public/js/map.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDV8Q55c6BRM1Tw8rKQGWbC2SiVuVSknJI&signed_in=true"></script>
   </body>
 </html>
