--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/public/css/styles.css" media="screen" charset="utf-8">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="../public/css/chat.css" media="screen" title="no title" charset="utf-8">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script>
@@ -19,7 +20,10 @@
     <div class="container">
       <h1>username password letz</h1>
       <div id="map"><div id="dialog" title="Chat Box">
-        <p>basic dialog</p>
+        <ul id="messages"></ul>
+    <form id="chat_stuff" action="">
+      <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
       </div>
     </div>
     </div>
