--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -13,21 +13,21 @@ form input {
 form button {
   width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px;
 }
-#messages {
+.messages {
   list-style-type: none; margin: 0; padding: 0;
 }
-#messages li {
+.messages li {
   padding: 5px 10px;
 }
-#messages li:nth-child(odd) {
+.messages li:nth-child(odd) {
    background: #eee;
  }
 
-#chat_stuff {
+.chat_stuff {
   width: 95%;
   position: absolute;
 }
 
-#dialog {
+.dialog {
   position: relative;
 }
