--- a/views/chat.html
+++ b/views/chat.html
@@ -18,10 +18,9 @@
   <body>
     <div class="container">
       <h1>username password letz</h1>
-      <div id="map">
-        <div id="dialog" title="Basic dialog">
-        <p>default dialog</p>
-        </div>
+      <div id="map"><div id="dialog" title="Chat Box">
+        <p>basic dialog</p>
+      </div>
     </div>
     </div>
     <script type="text/javascript" src="/public/js/map.js"></script>
