--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1,4 +1,5 @@
 html, body {
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -16,4 +17,10 @@ h1 {
   margin-right: 0px;
   padding: 0px;
   display: inline-block;
+  position: relative;
+}
+
+#container {
+  width: 100%;
+  height: 100%;
 }
