--- a/views/chat.html
+++ b/views/chat.html
@@ -1,29 +1,72 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
+
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="/public/css/styles.css" media="screen" charset="utf-8">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="../public/css/chat.css" media="screen" title="no title" charset="utf-8">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="http://cdn.socket.io/socket.io-1.3.0.js"></script>
     <script>
+
+
   $(function() {
-    $( "#dialog" ).dialog();
+
+    //connect with socket.io:
+    var socket = io.connect('http://localhost:3000');
+  	// on connection to server, ask for user's name with an anonymous callback
+  	socket.on('connect', function(){
+  		// call the server-side function 'adduser' and send one parameter (value of prompt)
+  		socket.emit('adduser', prompt("What's your name?"));
+
+      socket.on('updatechat', function (data) {
+    		//$('#conversation').append('<b>'+username + ':</b> ' + data + '<br>');
+        console.log(data)
+        $('.dialog[data-chatNumber="' + data.chatWindow + '"] .messages').prepend('<li>' + data.body + '</li>')
+    	});
+  	});
+
+
+
+    $( ".dialog" ).dialog();
+    $('.chat_stuff button').click(function(evt, target){
+      var self = this;
+      evt.preventDefault();
+      var message = {
+        body: $(self).prev().val(),
+        chatWindow: $(self).closest('.dialog').attr('data-chatNumber')
+      }
+      socket.emit('sendchat', message);
+      // socket send to server with text from the input field
+    })
   });
   </script>
   </head>
   <body>
-    <div class="container">
-      <h1>username password letz</h1>
-      <div id="map"><div id="dialog" title="Chat Box">
-        <p>basic dialog</p>
-      </div>
+
+    <div id="chat-container">
+        <div class="dialog" title="Chat Box" data-chatNumber="12345">
+          <ul class="messages"></ul>
+          <form class="chat_stuff" action="">
+            <input class="m" autocomplete="off" /><button class="send-button">Send</button>
+          </form>
+        </div>
+
+
+        <div class="dialog" title="Chat Box" data-chatNumber="67890">
+          <ul class="messages"></ul>
+          <form class="chat_stuff" action="">
+            <input class="m" autocomplete="off" /><button class="send-button">Send</button>
+          </form>
+        </div>
+
     </div>
-    </div>
-    <script type="text/javascript" src="/public/js/map.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDV8Q55c6BRM1Tw8rKQGWbC2SiVuVSknJI&signed_in=true"></script>
+
+
+
   </body>
 </html>
