Added conditional to render landing page if no current user and map otherwise.

--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="/public/css/styles.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="/public/css/landing.css" media="screen" charset="utf-8">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="../public/css/chat.css" media="screen" title="no title" charset="utf-8">
@@ -54,6 +55,7 @@
       </div>
     </div>
     <script type="text/javascript" src="/public/js/map.js"></script>
+    <script type="text/javascript" src="/public/js/landing.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDV8Q55c6BRM1Tw8rKQGWbC2SiVuVSknJI&signed_in=true"></script>
   </body>
 </html>
