Added login and signup forms with AJAX requests to authenticate.

--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="container"></div>
     <script type="text/javascript" src="/public/js/map.js"></script>
+    <script type="text/javascript" src="/public/js/landing.js"></script>
     <script type="text/javascript" src="/public/js/signup.js"></script>
     <script type="text/javascript" src="/public/js/login.js"></script>
     <script type="text/javascript" src="/public/js/chat.js"></script>
