--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,18 +1,21 @@
 html, body {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 300;
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0; }
-
-h1 {
-  font-family: 'Nunito', sans-serif;
-  font-size: 20px;
-  font-weight: 300; }
 
 #map {
   height: 600px;
   width: 100%;
   margin-right: 0px;
   padding: 0px;
-  display: inline-block; }
+  display: inline-block;
+  position: relative; }
+
+#container {
+  width: 100%;
+  height: 100%; }
 
 /*# sourceMappingURL=styles.css.map */
