--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -1,5 +1,6 @@
-<div id="header">
+<div id="landingHeader">
   <p>What are you in the mood for?</p><br>
   <p>You are not alone.</p><br>
   <p>Join us and letz...</p>
 </div>
+<div id="buttonsForms"></div>
