Added functionality to generate map upon user signup.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <div id="container"></div>
-    <script type="text/javascript" src="/public/js/map.js"></script>
-    <script type="text/javascript" src="/public/js/app.js"></script>
-    <script type="text/javascript" src="/public/js/landing.js"></script>
-    <script type="text/javascript" src="/public/js/signup.js"></script>
-    <script type="text/javascript" src="/public/js/login.js"></script>
-    <script type="text/javascript" src="/public/js/chat.js"></script>
+    <script src="/public/js/map.js"></script>
+    <script src="/public/js/signup.js"></script>
+    <script src="/public/js/landing.js"></script>
+    <script src="/public/js/app.js"></script>
+    <script src="/public/js/login.js"></script>
+    <script src="/public/js/chat.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDV8Q55c6BRM1Tw8rKQGWbC2SiVuVSknJI&signed_in=true"></script>
   </body>
 </html>
