--- a/public/views/partials/login.html
+++ b/public/views/partials/login.html
@@ -3,11 +3,11 @@
   <form action="">
     <div class="loginFields">
       <label>Email</label>
-      <input type="email" required autocomplete="off" />
+      <input type="email" id="loginEmail" required autocomplete="off">
     </div>
     <div class="loginFields">
       <label>Password</label>
-      <input type="password" required autocomplete="off" />
+      <input type="password" id="loginPassword" required autocomplete="off">
     </div>
     <p id="forgotPassword">Forgot password?</p>
     <button type="submit" id="loginSubmit" />Letz go!</button>
