Added css properties to landing.html, signup and login pages.

--- a/public/views/partials/loginSignup.html
+++ b/public/views/partials/loginSignup.html
@@ -1,4 +1,12 @@
+<link rel="stylesheet" href="public/css/landingpage.css">
+
 <div id="loginSignup">
-  <div id="signupButton">SIGN UP</div>
-  <div id="loginButton">LOGIN</div>
+  <div id="container">
+
+
+
+  <button type="button" id="signupButton">SIGN UP</button>
+  <button type="button" id="loginButton">LOGIN</button>
+
+  </div>
 </div>
