--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -17,7 +17,7 @@ form button {
   padding: 5px 10px;
 }
 .messages li:nth-child(odd) {
-   background: #eee;
+  background: #eee;
  }
 
 .sendMessage {
@@ -27,4 +27,14 @@ form button {
 
 .chats {
   position: relative;
+}
+
+.ui-dialog {
+  opacity: 0.4;
+}
+
+.ui-dialog-content {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 300;
+  font-size: 15px;
 }
