Added css for landing page and sign up forms

--- a/public/views/partials/loginSignup.html
+++ b/public/views/partials/loginSignup.html
@@ -1,12 +1,10 @@
 <link rel="stylesheet" href="public/css/landingpage.css">
 
-<div id="loginSignup">
-  <div id="container">
 
+        <div id="boxcontainer">
+      <div id="container">
+      <button type="button" id="signupButton">SIGN UP</button>
+    <button type="button" id="loginButton">LOGIN</button>
+    </div>
 
-
-  <button type="button" id="signupButton">SIGN UP</button>
-  <button type="button" id="loginButton">LOGIN</button>
-
-  </div>
 </div>
