--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,28 +1,6 @@
-/**
- * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
- * http://cssreset.com
- */
-    html, body, div, span, applet, object, iframe,
-    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-    a, abbr, acronym, address, big, cite, code,
-    del, dfn, em, img, ins, kbd, q, s, samp,
-    small, strike, strong, sub, sup, tt, var,
-    b, u, i, center,
-    dl, dt, dd, ol, ul, li,
-    fieldset, form, label, legend,
-    table, caption, tbody, tfoot, thead, tr, th, td,
-    article, aside, canvas, details, embed,
-    figure, figcaption, footer, header, hgroup,
-    menu, nav, output, ruby, section, summary,
-    time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    }
-    /* HTML5 display-role reset for older browsers */
+
+
+
     article, aside, details, figcaption, figure,
     footer, header, hgroup, menu, nav, section {
     display: block;
@@ -50,28 +28,33 @@
 
 
 body {
-	background: #4EAFCD url("bg.png") repeat;
+
 
 	font-family: 'Nunito', sans-serif;
+
 }
 
 
 .container {
 	margin: auto;
 	padding: 0px 0;
+  width: 1900px;
+  height: 1080px;
+background-image: url("/public/images/formbackground.jpg");
 }
 
 #loginform {
   position:fixed;
-  top: 23%;
-  left: 29%;
-	background-color: #f7f7f7;
+  top: 45%;
+  left: 35%;
+  opacity: 0.6;
+	background-color:black;
 	display: block;
 	height: 382px;
 	margin: 0 auto;
-	outline: solid 10px rgba(0,0,0,0.10);
-	width: 600px;
+	width: 400px;
 	padding: 30px;
+
 }
 
 .login-username:before {
