--- a/public/views/index.html
+++ b/public/views/index.html
@@ -12,6 +12,7 @@
     <script src="http://cdn.socket.io/socket.io-1.3.0.js"></script>
   </head>
   <body>
+    <div id="menu"></div>
     <div id="container"></div>
     <script src="/public/js/map.js"></script>
     <script src="/public/js/signup.js"></script>
