Fixed merge conflict, added map.css file.

--- a/public/views/partials/menu.html
+++ b/public/views/partials/menu.html
@@ -1,5 +1,7 @@
-<select id="menuOptions">
-  <option value="about">About</option>
-  <option value="contact">Contact</option>
-  <option value="contact">Account</option>
-</select>
+<div id="menuButton">MENU</div>
+
+<div id="menuOptions">
+  <p id="about">About</p>
+  <p id="contact">Contact</p>
+  <p id="account">Account</p>
+</div>
