--- a/public/css/map.css
+++ b/public/css/map.css
@@ -1,3 +1,28 @@
 #statusOverlay {
+  width: 391px;
+  height: 126px;
+  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -70px 0 0 -170px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  text-align: center;
+  font-size: 24px;
+  color: whitesmoke;
+}
 
+#statusForm {
+  padding: 3px;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  margin-top: 10px;
+}
+
+#statusDropdown {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 300;
+  font-size: 20px;
 }
