--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,7 @@ html, body {
 
 #container {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  position: relative; }
 
 /*# sourceMappingURL=styles.css.map */
