--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="/public/css/styles.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="/public/css/chat.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/public/css/map.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
