--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="/public/css/styles.css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="/public/css/chat.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/public/css/menu.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="/public/css/landing.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/public/css/signup.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/public/css/map.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/public/css/chat.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
@@ -15,10 +18,11 @@
   <body>
     <div id="menu"></div>
     <div id="container"></div>
+    <script src="/public/js/app.js"></script>
+    <script src="/public/js/menu.js"></script>
     <script src="/public/js/map.js"></script>
     <script src="/public/js/signup.js"></script>
     <script src="/public/js/landing.js"></script>
-    <script src="/public/js/app.js"></script>
     <script src="/public/js/login.js"></script>
     <script src="/public/js/chat.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDV8Q55c6BRM1Tw8rKQGWbC2SiVuVSknJI&signed_in=true"></script>
