--- a/public/views/partials/loginSignup.html
+++ b/public/views/partials/loginSignup.html
@@ -1,10 +1,4 @@
-<link rel="stylesheet" href="public/css/landingpage.css">
-
-
-        <div id="boxcontainer">
-      <div id="container">
-      <button type="button" id="signupButton">SIGN UP</button>
-    <button type="button" id="loginButton">LOGIN</button>
-    </div>
-
+<div id="loginSignup">
+  <button type="button" id="signupButton">SIGN UP</button>
+  <button type="button" id="loginButton">LOGIN</button>
 </div>
