--- a/public/views/partials/menu.html
+++ b/public/views/partials/menu.html
@@ -1,7 +1,7 @@
 <div id="menuButton">MENU</div>
 
 <div id="menuOptions">
-  <p id="about">About</p>
-  <p id="contact">Contact</p>
-  <p id="account">Account</p>
+  <p id="about">ABOUT</p>
+  <p id="contact">CONTACT</p>
+  <p id="account">ACCOUNT</p>
 </div>
