--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,48 +1,3 @@
-
-
-
-    article, aside, details, figcaption, figure,
-    footer, header, hgroup, menu, nav, section {
-    display: block;
-    }
-    body {
-    line-height: 1;
-    }
-    ol, ul {
-    list-style: none;
-    }
-    blockquote, q {
-    quotes: none;
-    }
-    blockquote:before, blockquote:after,
-    q:before, q:after {
-    content: '';
-    content: none;
-    }
-    table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    }
-
-/* Reset End */
-
-
-body {
-
-
-	font-family: 'Nunito', sans-serif;
-
-}
-
-
-.container {
-	margin: auto;
-	padding: 0px 0;
-  width: 1900px;
-  height: 1080px;
-background-image: url("/public/images/formbackground.jpg");
-}
-
 #loginform {
   position:fixed;
   top: 45%;
@@ -58,7 +13,7 @@ background-image: url("/public/images/formbackground.jpg");
 }
 
 .login-username:before {
-	content: "Login Form";
+	content: "Welcome";
 	color: #4c4c4c;
 	font-size: 20px;
 	text-transform: uppercase;
@@ -142,7 +97,8 @@ background-image: url("/public/images/formbackground.jpg");
 	box-sizing: border-box;
 	color: #fff;
 	cursor: pointer;
-	font:  14px/36px 'oswald';
+	font:  24px/36px 'oswald';
+  padding: 1px;
 	height: 42px;
 	letter-spacing: 1px;
 	margin-top: -11px;
