--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,14 +1,36 @@
+#landingHeader {
+	font-weight: 300;
+	font-size: 22px;
+	text-align: center;
+	position: absolute;
+	top: 15%;
+	left: 50%;
+	margin: -25px 0 0 -160px;
+	background-color: rgba(0, 0, 0, 0.3);
+	color: whitesmoke;
+	width: 334px;
+	height: 115px;
+	border-radius: 6px;
+}
+
+.slogan {
+	display: block;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 #buttonsForms {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+#loginSignup {
 	text-align: center;
 	position: absolute;
 	top: 78%;
 	left: 50%;
 	margin: -25px 0 0 -160px;
-}
-
-#loginSignup {
-	text-align: center;
-	margin: auto;
 }
 
 #signupButton {
@@ -37,4 +59,24 @@
 	font-size: 30px;
 	display: inline-block;
 	margin-left: 10px;
+}
+
+#login {
+	background-color: rgba(0, 0, 0, 0.3);
+	border-radius: 4px;
+	text-align: center;
+	position: absolute;
+	top: 78%;
+	left: 50%;
+	margin: -25px 0 0 -160px;
+}
+
+#signup {
+	background-color: rgba(245, 245, 245, 0.3);
+	border-radius: 4px;
+	text-align: center;
+	position: absolute;
+	top: 78%;
+	left: 50%;
+	margin: -25px 0 0 -160px;
 }
