--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -1,1 +1,6 @@
+<div id="landingHeader">
+  <p class="slogan" id="mood">What are you in the mood for?</p>
+  <p class="slogan" id="notAlone">You are not alone.</p>
+  <p class="slogan" id="joinUs">Join us and</p>
+</div>
 <div id="buttonsForms"></div>
