--- a/public/views/partials/login.html
+++ b/public/views/partials/login.html
@@ -1,22 +1,15 @@
-
-<div id="centered">
-<div id="main" class="container">
-	<form name="loginform" id="loginform" action=""  class="wpl-track-me">
-
-    <p class="login-username">
-		<label for="user_login">Email</label>
-			<input type="email" name="log" id="loginEmail" class="input" placeholder="Email" value="" size="20" />
-		</p>
-
-    <p class="login-password">
-		<label for="user_pass">Password</label><input type="password" name="pwd" id="loginPassword" class="input" placeholder="Password" value="" size="20" />
-		</p>
-
-		<p class="login-submit"><input type="submit" name="wp-submit" id="loginSubmit" class="button-primary" value="Sign Up" />
-
-		</p>
-
-
-	</form>
-</div>
+<div id="login">
+  <h1>LOGIN</h1>
+  <form action="">
+    <div class="loginFields">
+      <label>Email</label>
+      <input type="email" required autocomplete="off">
+    </div>
+    <div class="loginFields">
+      <label>Password</label>
+      <input type="password" required autocomplete="off">
+    </div>
+    <p id="forgotPassword">Forgot password?</p>
+    <button type="submit" id="loginSubmit">Letz go!</button>
+  </form>
 </div>
