--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div id="menu"></div>
+    <div id="logout"></div>
     <div id="container"></div>
     <script src="/public/js/map.js"></script>
     <script src="/public/js/signup.js"></script>
