--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -1,6 +1,8 @@
-<div id="landingHeader">
-  <p class="slogan" id="mood">What are you in the mood for?</p>
-  <p class="slogan" id="notAlone">You are not alone.</p>
-  <p class="slogan" id="joinUs">Join us and</p>
+<div id="landing">
+  <div id="landingHeader">
+    <p class="slogan" id="mood">What are you in the mood for?</p>
+    <p class="slogan" id="notAlone">You are not alone.</p>
+    <p class="slogan" id="joinUs">Join us and</p>
+  </div>
+  <div id="buttonsForms"></div>
 </div>
-<div id="buttonsForms"></div>
