--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,3 +1,12 @@
+#landing {
+	width: 100%;
+  height: 100%;
+	position: relative;
+	background-image: url("http://i.imgur.com/aaTsnPs.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 #landingHeader {
 	font-weight: 300;
 	font-size: 22px;
@@ -25,6 +34,14 @@
 	height: 100%;
 }
 
+#loginForm {
+	text-align: center;
+}
+
+#signupForm {
+	text-align: center;
+}
+
 #loginSignup {
 	text-align: center;
 	position: absolute;
@@ -45,6 +62,7 @@
 	font-size: 30px;
 	display: inline-block;
 	margin-right: 10px;
+	outline: none
 }
 
 #loginButton {
@@ -59,24 +77,76 @@
 	font-size: 30px;
 	display: inline-block;
 	margin-left: 10px;
+	outline: none;
 }
 
 #login {
-	background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 50%;
+  left: 79%;
+  margin: -125px 0 0 -100px;
+	background-color: black;
+	color: whitesmoke;
+	display: block;
+	height: 137px;
+	width: 250px;
+	padding: 30px;
 	border-radius: 4px;
 	text-align: center;
-	position: absolute;
-	top: 78%;
-	left: 50%;
-	margin: -25px 0 0 -160px;
 }
 
 #signup {
-	background-color: rgba(245, 245, 245, 0.3);
+	background-color: whitesmoke;
 	border-radius: 4px;
 	text-align: center;
 	position: absolute;
-	top: 78%;
-	left: 50%;
-	margin: -25px 0 0 -160px;
+	height: 310px;
+	width: 250px;
+	top: 45%;
+	left: 18%;
+	margin: -125px 0 0 -100px;
+}
+
+#signupTitle {
+	font-size: 25px;
+	margin-top: 12px;
+	margin-bottom: 8px;
+}
+
+#loginTitle {
+	font-size: 25px;
+	margin-top: -16px;
+	margin-bottom: 8px;
+}
+
+.loginInputs {
+	font-family: 'Nunito', sans-serif;
+  font-weight: 300;
+	font-size: 15px;
+	cursor: text;
+	width: 86.5%;
+	height: 19px;
+	padding: 8px 15px;
+	margin-top: 15px;
+	margin-bottom: -18px;
+	outline: none;
+	display: block;
+	background-color: rgba(245, 245, 245, 0);
+	color: whitesmoke;
+}
+
+.signupInputs {
+	font-family: 'Nunito', sans-serif;
+	font-weight: 300;
+	font-size: 15px;
+	cursor: text;
+	width: 86.5%;
+	height: 19px;
+	padding: 8px 15px;
+	margin-top: 15px;
+	margin-bottom: -18px;
+	outline: none;
+	display: block;
+	background-color: rgba(245, 245, 245, 0);
+	color: black;
 }
