--- a/public/views/partials/signup.html
+++ b/public/views/partials/signup.html
@@ -1,26 +1,32 @@
 <div id="signup">
-  <h1>SIGN UP</h1>
-  <form action="">
-    <div class="signupFields">
-      <label>First name</label>
-      <input type="text" id="signupFirstName" required autocomplete="off">
-    </div>
-    <div class="signupFields">
-      <label>Last name</label>
-      <input type="text" id="signupLastName" required autocomplete="off">
-    </div>
-    <div class="signupFields">
-      <label>Email</label>
-      <input type="email" id="signupEmail" required autocomplete="off">
-    </div>
-    <div class="signupField">
-      <label>Birthdate</label>
-      <input type="date" id="signupDob" required autocomplete="off">
-    </div>
-    <div class="signupField">
-      <label>Password</label>
-      <input type="password" id="signupPassword" required autocomplete="off">
-    </div>
-    <button type="submit" id="signupSubmit">Letz start!</button>
-  </form>
+    <p id="signupTitle">SIGNUP</p>
+    <form name="loginform" id="signupForm" action=""  class="wpl-track-me">
+
+    <p class="signupFields">
+        <label for="user_login">First Name</label>
+            <input type="text" name="log" id="signupFirstName" class="signupInputs" placeholder="First Name" value="" size="20" />
+        </p>
+
+        <p class="signupFields">
+        <label for="user_pass">Last Name</label><input type="text" name="pwd" id="signupLastName" class="signupInputs" placeholder="Last Name" value="" size="20" />
+        </p>
+
+    <p class="signupFields">
+        <label for="user_pass">Email</label><input type="email" name="pwd" id="signupEmail" class="signupInputs" placeholder="Email" value="" size="20" />
+        </p>
+
+    <p class="signupFields">
+        <label for="user_pass">Date of Birth</label><input type="date" name="pwd" id="signupDob" class="signupInputs" placeholder="Date of Birth" value="" size="20" />
+        </p>
+
+    <p class="signupFields">
+        <label for="user_pass">Password</label><input type="password" name="pwd" id="signupPassword" class="signupInputs" placeholder="Password" value="" size="20" />
+        </p>
+
+        <p class="login-submit"><input type="submit" name="wp-submit" id="signupSubmit" class="button-primary" value="Sign Up" />
+
+        </p>
+
+
+    </form>
 </div>
